# unscrapulous

./: .gitignore  LICENSE  README.md  experiments.ipynb  irda_blacklisted.ipynb  itd_defaulters.ipynb  main.py  pyproject.toml  utils.py
notebooks/: experiments.ipynb  irda_blacklisted.ipynb  itd_defaulters.ipynb
scripts/: irda-blacklisted.py  mca-company-defaulter-list.py  mca-director-defaulter-list.py  mcx-secretaries-defaulter-list.py  nse-regulatory-defaulting-clients.py  sebi-debarred-nse.py  unsc-1988.py  unsc-consolidated-list.py  utils.py  wildlife-crime-convicts.py
tests/: test_unscrapulous.py
unscrapulous/: arbitration-awards-bse.py  arbitration-awards-nse.py  arbitration_awards_bse.py  arbitration_awards_nse.py  bse-defaulter-and-expelled-members.py  bse_defaulter_and_expelled_members.py  config.toml  icex-defaulter-members.py  icex-expelled-members.py  icex_defaulter_members.py  icex_expelled_members.py  income-tax-defaulters.py  income_tax_defaulters.py  irda-blacklisted.py  irda_blacklisted.py  mca-company-defaulter-list.py  mca-director-defaulter-list.py  mca-director-disqualified-list.py  mca-proclaimed-offenders-ind.py  mca_company_defaulter_list.py  mca_director_defaulter_list.py  mca_director_disqualified_list.py  mca_proclaimed_offenders_ind.py  mcx-action-ap.py  mcx-defaulter-members.py  mcx-secretaries-defaulter-list.py  mcx_action_ap.py  mcx_defaulter_members.py  mcx_secretaries_defaulter_list.py  mse-arbitral-awards.py  mse_arbitral_awards.py  ncdex-suspended-defaulted-expelled-debarred-members.py  nse-defaulted-members.py  (+22 more)
(+22 files in other folders)
